@@ -26,14 +26,15 @@ SUPPORTED FORMATS
 OPTIONS
     The following is an example login.app.theme file    
     ----------------------------------------------------------------------
-    # Color, font,, position for the messages (ie: shutting down)
+    # Color, font, position for the messages (ie: shutting down)
     msg_color               #FFFFFF
     msg_font                Verdana:size=16:bold
     msg_x                   50%
     msg_y                   30
 
-    # style of background: 'stretch' or 'tile'
+    # style of background: 'stretch', 'tile', 'center'
     background_style        stretch
+    background_color		#FF0033
 
     # Horizonatal and vertical position for the panel.
     input_panel_x           50%
